...
            "state" : "translated",
            "value" : "Achievement Unlocked!"
          }
        }
      }
    },
    "Achievements" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Achievements"
...
            "state" : "translated",
            "value" : "Content Filtering"
          }
        }
      }
    },
    "Continue" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
...
            "state" : "translated",
            "value" : "Export as Website"
          }
        }
      }
    },
    "Export Data" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Export Data"
...
            "state" : "translated",
            "value" : "Export Your Data"
          }
        }
      }
    },
    "Face/Off" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Face/Off"
...
            "state" : "translated",
            "value" : "Grid"
          }
        }
      }
    },
    "Haptic Feedback" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Haptic Feedback"
...
            "state" : "translated",
            "value" : "Mark All as Read"
          }
        }
      }
    },
    "Mark as Watched" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mark as Watched"
...
            "state" : "translated",
            "value" : "Movie"
          }
        }
      }
    },
    "Movies" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Movies"
...
            "state" : "translated",
            "value" : "Search filtered items"
          }
        }
      }
    },
    "Search movies" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search movies"
...
            "state" : "translated",
            "value" : "Setting Up TMDb"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
...
            "state" : "translated",
            "value" : "watched"
          }
        }
      }
    },
    "Watched" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Watched"
...
            "state" : "translated",
            "value" : "Website Title"
          }
        }
      }
    },
    "Welcome to NCDB" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome to NCDB"
...
            "state" : "translated",
            "value" : "You haven't ranked any films yet."
          }
        }
      }
    },
    "You're All Set!" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "You're All Set!"
...
